# apps/auth-service/src/controller/auth.controller.ts
@@ -9,6 +9,8 @@ import {
 import prisma from "@packages/libs/prisma";
 import { ValidationError } from "@packages/error-handler";
 import bcrypt from "bcryptjs";
+import jwt from "jsonwebtoken";
+import { setCookie } from "../utils/cookies/setCookie";
 
 // user registration
 export const userRegistration = async (
@@ -69,6 +71,56 @@ export const verifyUser = async (
     return res
       .status(201)
       .json({ success: true, message: "User registered successfully" });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+// login user
+export const loginUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction,
+) => {
+  try {
+    const { email, password } = req.body;
+    if (!email || !password) {
+      return next(new ValidationError("All fields are required"));
+    }
+    const user = await prisma.users.findUnique({
+      where: { email },
+    });
+    if (!user) {
+      return next(new ValidationError("User not found"));
+    }
+    const isMatch = await bcrypt.compare(password, user.password!);
+    if (!isMatch) {
+      return next(new ValidationError("Invalid credentials"));
+    }
+    const accessToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.ACCESS_TOKEN_SECRET!,
+      {
+        expiresIn: "1h",
+      },
+    );
+    const refreshToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.REFRESH_TOKEN_SECRET!,
+      {
+        expiresIn: "7d",
+      },
+    );
+    setCookie(res, "access_token", accessToken);
+    setCookie(res, "refresh_token", refreshToken);
+    res.status(200).json({
+      message: "Login successful",
+      user: {
+        id: user.id,
+        email: user.email,
+        name: user.name,
+      },
+    });
   } catch (error) {
     return next(error);
   }
